tests/ui/unknown-param.stderr
error: unknown argument `blargh`
 --> tests/ui/unknown-param.rs:3:13
  |
3 | #[generator(blargh = 3)]
  |             ^^^^^^
