tests/ui/unknown-param.rs
use fauxgen::generator;

#[generator(blargh = 3)]
fn gen() {}

fn main() {}
